test/ui/tests/name-resolution/exposure/re-export-more-private-bindings.stderr
error[E009]: re-export of the more private binding `capsule.Thing`
 --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:4:14
  |
4 | use Thing as Piece
  |              ^^^^^ re-exporting binding with greater exposure
  |
 --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:7:6
  |
7 | data Thing: Type of
  |      ----- re-exported binding with lower exposure
  |
 note: expected the exposure of `capsule.Piece`
                  to be at most `capsule`
             but it actually is unrestricted

error[E009]: re-export of the more private binding `capsule.alpha.beta.Linchpin`
  --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:12:14
   |
12 |         data Linchpin: Type of
   |              -------- re-exported binding with lower exposure
   |
  --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:16:35
   |
16 |             use super.Linchpin as L
   |                                   ^ re-exporting binding with greater exposure
   |
  note: expected the exposure of `capsule.alpha.beta.gamma.L`
                   to be at most `capsule.alpha.beta`
              but it actually is `capsule`

error[E009]: re-export of the more private binding `capsule.alpha.beta.gamma.Mock`
  --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:19:18
   |
19 |             data Mock: Type of
   |                  ---- re-exported binding with lower exposure
   |
  --> ${DIRECTORY}/name-resolution/exposure/re-export-more-private-bindings.lushui:22:25
   |
22 |             use Mock as //>
   |                         ^^^ re-exporting binding with greater exposure
   |
  note: expected the exposure of `capsule.alpha.beta.gamma.//>`
                   to be at most `capsule.alpha.beta`
              but it actually is `capsule.alpha`

error: aborting due to 3 previous errors
 note: the error E009 has a detailed explanation
 help: run `lushui explain E009` to view it

